# hypridle_audio_listener

./: Cargo.toml  LICENSE  PKGBUILD  README.md
src/: audiosys.rs  config.rs  main.rs
