[package]
name = "hypridle_audio_listener"
version = "0.1.0"
edition = "2021"

[dependencies]
pipewire = "0.8.0"
tokio = { version = "1.41.1", features = ["full"] }
serde_json = "1.0.133"
which = "7.0.0"
clap ="4.5.22"
clap_derive = "4.5.18"
once_cell = "1.20.2"
serde = { version = "1.0.215", features = ["derive"] }
dirs-next = "2.0.0"
config = "0.15.4"